--- a/index.html
+++ b/index.html
@@ -5,10 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>User Directory</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
-    <script src="main.js"></script>
+    <link rel="stylesheet" type="text/css" media="screen" href="index.css" />
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <h1>User Directory</h1>
+    <h1 class= "title">User Directory</h1>
+    <h1 class = "greeting">Welcome </h1>
+    <h1 class= "author">Ayman Elaraby</h1>
+
+    <button>Click Me</button>
+
+    <script type="text/javascript" src='index.js'></script>
 </body>
 </html>
