--- a/index.html
+++ b/index.html
@@ -13,8 +13,13 @@
     <h1 class = "greeting">Welcome </h1>
     <h1 class= "author">Ayman Elaraby</h1>
 
-    <button>Click Me</button>
+    <button id = "button1">Click Me</button>
 
     <script type="text/javascript" src='index.js'></script>
+
+    <form name = "form">
+        <br><input type = "text" id="input">
+        <button id="button2" onclick="x();">Done</button>
+    </form>
 </body>
-</html>
+</html>)
